# FHE_Proglang

./: CMakeLists.txt  fhe_prolang_main.cpp  main.cpp  mult.cpp  test_binary.cpp  test_saving_key.cpp  try.fhe
Parser/: block_statement.cpp  block_statement.h  dump2  dump3  syntax_analyzer.cpp  syntax_analyzer.h  syntax_converter.cpp  syntax_converter.h
Parser/Statement/: arguments.cpp  declarartion_statement.cpp  expression_statement.cpp  function_statement.cpp  print_statement.cpp  statement.cpp  statement.h
Tokenizer/: dump.txt  token_element.cpp  token_element.h  tokenizer.cpp  tokenizer.h
